# raft_vibe

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  EXPLAIN_DERIVE.md  LOG.md  QUICK_START.md  README.md  VIBE_CODING_GUIDE.md  docker-compose.chaos.yml  run_cluster.sh  rust_basics.md
chaos-test/: Cargo.toml
chaos-test/src/: checker.rs  client.rs  docker.rs  history.rs  lib.rs  runner.rs
chaos-test/tests/: checker_test.rs
examples/: basics.rs
src/: client_http.rs  lib.rs  main.rs  raft.rs  raft_core.rs  raft_node.rs  raft_server.rs  state_machine.rs  state_machine_kv.rs  storage.rs  storage_file.rs  storage_memory.rs  testing.rs  transport.rs  transport_http.rs  transport_inmemory.rs
src/api/: client_http.rs  mod.rs
src/core/: config.rs  mod.rs  raft_core.rs  raft_node.rs  raft_server.rs  snapshot.rs
src/state_machine/: kv.rs  mod.rs  traits.rs
src/storage/: file.rs  memory.rs  mod.rs  traits.rs
src/transport/: http.rs  inmemory.rs  mod.rs  traits.rs
tests/: chaos_linearizability_test.rs  http_cluster.rs  linearizability_test.rs
