[package]
name = "raft_vibe"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "macros", "time", "test-util"] }
async-trait = "0.1"
futures = "0.3"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
http-body-util = "0.1"
